// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiBetaBadge is rendered 1`] = `
<span>
  <span
    aria-label="aria-label"
    class="euiBetaBadge testClass1 testClass2 emotion-euiBetaBadge-hollow-m-baseline-euiTestCss"
    data-test-subj="test subject string"
    title="Beta"
  >
    Beta
  </span>
</span>
`;

exports[`EuiBetaBadge props alignement baseline is rendered 1`] = `
<span>
  <span
    class="euiBetaBadge emotion-euiBetaBadge-hollow-m-baseline"
    title="Beta"
  >
    Beta
  </span>
</span>
`;

exports[`EuiBetaBadge props alignement middle is rendered 1`] = `
<span>
  <span
    class="euiBetaBadge emotion-euiBetaBadge-hollow-m-middle"
    title="Beta"
  >
    Beta
  </span>
</span>
`;

exports[`EuiBetaBadge props color accent is rendered 1`] = `
<span>
  <span
    class="euiBetaBadge emotion-euiBetaBadge-accent-m-baseline"
    title="Beta"
  >
    Beta
  </span>
</span>
`;

exports[`EuiBetaBadge props color hollow is rendered 1`] = `
<span>
  <span
    class="euiBetaBadge emotion-euiBetaBadge-hollow-m-baseline"
    title="Beta"
  >
    Beta
  </span>
</span>
`;

exports[`EuiBetaBadge props color subdued is rendered 1`] = `
<span>
  <span
    class="euiBetaBadge emotion-euiBetaBadge-subdued-m-baseline"
    title="Beta"
  >
    Beta
  </span>
</span>
`;

exports[`EuiBetaBadge props color warning is rendered 1`] = `
<span>
  <span
    class="euiBetaBadge emotion-euiBetaBadge-warning-m-baseline"
    title="Beta"
  >
    Beta
  </span>
</span>
`;

exports[`EuiBetaBadge props iconType 1`] = `
<span>
  <span
    class="euiBetaBadge emotion-euiBetaBadge-hollow-m-baseline"
    title="Beta"
  >
    <span
      aria-hidden="true"
      class="euiBetaBadge__icon emotion-euiBetaBadge__icon"
      color="inherit"
      data-euiicon-type="beta"
    />
  </span>
</span>
`;

exports[`EuiBetaBadge props single letter 1`] = `
<span>
  <span
    class="euiBetaBadge emotion-euiBetaBadge-hollow-m-baseline"
    title="B"
  >
    B
  </span>
</span>
`;

exports[`EuiBetaBadge props size m is rendered 1`] = `
<span>
  <span
    class="euiBetaBadge emotion-euiBetaBadge-hollow-m-baseline"
    title="Beta"
  >
    Beta
  </span>
</span>
`;

exports[`EuiBetaBadge props size s is rendered 1`] = `
<span>
  <span
    class="euiBetaBadge emotion-euiBetaBadge-hollow-s-baseline"
    title="Beta"
  >
    Beta
  </span>
</span>
`;

exports[`EuiBetaBadge props tooltip and anchorProps are rendered 1`] = `
<span
  class="euiToolTipAnchor customAnchorClass emotion-euiToolTipAnchor-inlineBlock"
  data-test-subj="DTS"
>
  <span
    class="euiBetaBadge emotion-euiBetaBadge-hollow-m-baseline"
    role="button"
    tabindex="0"
  >
    Beta
  </span>
</span>
`;
